<resources>
    <string name="app_name">DemoApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Отмена</string>
    <string name="message">Сообщение</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="verify">Код потверждения</string>
    <string name="register">Регистрация</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nfc">nfc</string>
    <string name="chat">чат</string>
    <string name="timer">таймер</string>
    <string name="search">Поиск</string>
    <string name="account">профиль</string>
    <string name="onWork">Раб. место</string>
    <string name="InKitchen">На кухне</string>
    <string name="InHome">Дома</string>
</resources>
