<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="1px"
            android:layout_weight="1"
            android:background="@drawable/style_edit_top"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_edit_mid"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:paddingStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1px"
            android:layout_weight="1"
            android:background="@drawable/style_edit_password"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/verify"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/style_button"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnter" />

    <ProgressBar
        android:id="@+id/spiner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>