<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:civ_border_color="@color/blue"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Имя Фамилия" />

    <LinearLayout
        android:id="@+id/statusContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/statusInWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onWork"
            android:textColor="@android:color/white"
            android:paddingLeft="2dp"
            android:background="@drawable/rounded_rect_gray_left"
            />
        <TextView
            android:id="@+id/statusInKitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InKitchen"
            android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/statusInHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InHome"
            android:paddingRight="2dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_rect_gray_right"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
